test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/02-triggers.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-single-trigger-source-multiple-targets-trigger-ns
