test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/04-update-source.yaml
apiVersion: v1
data:
  foo: baz
kind: ConfigMap
metadata:
  name: foosource
  namespace: cpol-clone-sync-single-trigger-source-multiple-targets-ns
