test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource
  namespace: cpol-clone-sync-single-trigger-source-multiple-targets-ns
