test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-single-trigger-source-multiple-targets-trigger-ns
