test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/policy-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-single-trigger-source-multiple-targets-1
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: foosource
        namespace: cpol-clone-sync-single-trigger-source-multiple-targets-ns
      kind: ConfigMap
      name: footarget
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: rule-sync-image-pull-secret
