test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-single-trigger-source-multiple-targets-1
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-single-trigger-source-multiple-targets-2
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
