test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/03-assert.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: footarget
  namespace: cpol-single-trigger-source-multiple-targets-trigger-ns
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: bartarget
  namespace: cpol-single-trigger-source-multiple-targets-trigger-ns
