test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: footarget
  namespace: cpol-single-trigger-source-multiple-targets-trigger-ns
