test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-single-trigger-source-multiple-targets/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-sync-single-trigger-source-multiple-targets
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-1.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-2.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-sync-single-trigger-source-multiple-targets-1
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-sync-single-trigger-source-multiple-targets-2
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
    - assert:
        file: chainsaw-step-03-assert-1-2.yaml
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - assert:
        file: chainsaw-step-06-assert-1-1.yaml
    - assert:
        file: chainsaw-step-06-assert-1-2.yaml
